minor details update

--- a/data/projects.json
+++ b/data/projects.json
@@ -63,7 +63,7 @@
     "problem": "Sobre/infra riego por falta de datos.",
     "solution": "Sensores + predicción de evapotranspiración con alertas.",
     "industries": "Agro",
-    "tech_stack": "Python|MQTT|InfluxDB|Grafana",
+    "tech_stack": "Java|MQTT|InfluxDB|Grafana",
     "trl": "Prototipo",
     "demo_url": "https://demo.example/agro",
     "repo_url": "https://repo.example/agro",
@@ -199,7 +199,7 @@
     "problem": "Rutas subóptimas por múltiples restricciones.",
     "solution": "Solver multi-objetivo con ventanas de tiempo.",
     "industries": "Logística",
-    "tech_stack": "Python|OR-Tools|FastAPI",
+    "tech_stack": "Java|OR-Tools|FastAPI",
     "trl": "Piloto",
     "demo_url": "",
     "repo_url": "https://repo.example/greenlog",
@@ -239,7 +239,7 @@
     "problem": "Dificultad para entender trámites.",
     "solution": "Chat guiado con fuentes oficiales citadas.",
     "industries": "Sector Público",
-    "tech_stack": "Python|RAG|LangChain",
+    "tech_stack": "C++|RAG|LangChain",
     "trl": "Ida",
     "demo_url": "",
     "repo_url": "https://repo.example/talk2law",
